--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <a class="logo" href="/">
       <img src="Logo.png" alt="Techspire Logo">
     </a>
+
+    <h1> Welcome to aashish college</h1>
     <ul class="nav-links">
       <li><a href="/">Overview</a></li>
       <li><a href="#">About Us</a></li>
