--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
     <li>Help you develop a Personal Development Portfolio.</li>
   </ul>
 </section>
+<script src="script.js"></script>
+
 
 </body>
 </html>
