add just random things

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <a class="logo" href="/">
       <img src="Logo.png" alt="Techspire Logo">
     </a>
+
+    <h1> Welcome to aashish college</h1>
     <ul class="nav-links">
       <li><a href="/">Overview</a></li>
       <li><a href="#">About Us</a></li>
@@ -63,6 +65,7 @@
   </p>
   <h3>Aim of Courses</h3>
   <ul>
+    <li> dsafhjksdahfjsd</li>
     <li>Facilitate your progression with practical and academic skills.</li>
     <li>Develop your skills in problem-solving and decision-making.</li>
     <li>Help you develop a Personal Development Portfolio.</li>
